--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       document.body.appendChild(div);
     };
   </script>
-  <div id="root"></div>
+  <div id="root">
+    <div
+      style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; font-family: sans-serif; background: #FB923C; color: white;">
+      <h1 style="margin: 0;">Hello Foodie!</h1>
+      <p style="opacity: 0.8;">Cargando experiencia gastronómica...</p>
+    </div>
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
