--- a/index.html
+++ b/index.html
@@ -12,11 +12,23 @@
 
 <body>
   <script>
+    function showError(msg, stack) {
+      var div = document.getElementById('debug-error');
+      if (!div) {
+        div = document.createElement('div');
+        div.id = 'debug-error';
+        div.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(255,0,0,0.9);color:white;z-index:99999;padding:20px;font-size:14px;font-family:monospace;word-break:break-all;overflow:auto;';
+        document.body.appendChild(div);
+      }
+      div.innerHTML = '<h1>FATAL ERROR</h1><p>' + msg + '</p><pre>' + (stack || 'No stack') + '</pre>';
+    }
+
     window.onerror = function (msg, url, line, col, error) {
-      var div = document.createElement('div');
-      div.style.cssText = 'position:fixed;top:0;left:0;width:100%;background:red;color:white;z-index:9999;padding:10px;font-size:12px;font-family:sans-serif;word-break:break-all';
-      div.innerHTML = '<strong>CRASH DETECTED:</strong><br>' + msg + '<br><small>' + (error && error.stack ? error.stack : 'No stack trace available') + '</small>';
-      document.body.appendChild(div);
+      showError(msg, error ? error.stack : 'Line: ' + line);
+    };
+
+    window.onunhandledrejection = function (event) {
+      showError('Promise Rejected: ' + event.reason, event.reason ? event.reason.stack : '');
     };
   </script>
   <div id="root">
