Fix: Validate all ENV variables and add version tag v1.0.4

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
   </div>
   <script type="module" src="/src/main.jsx"></script>
+  <div
+    style="position: fixed; bottom: 0; right: 0; background: black; color: white; font-size: 8px; padding: 2px; opacity: 0.5; pointer-events: none; z-index: 100000;">
+    v1.0.4-DEBUG</div>
 </body>
 
 </html>
