--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/manifest.json?v=2" />
+  <link rel="apple-touch-icon" href="/icon-192-v2.png" />
   <meta name="theme-color" content="#FB923C" />
   <title>Hello Foodie!</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
