--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <link rel="manifest" href="/manifest.json?v=3" />
-  <link rel="apple-touch-icon" href="/icon-192-v3.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/png" href="/icon-192-v2.png" />
+  <link rel="apple-touch-icon" href="/icon-192-v2.png" />
   <meta name="theme-color" content="#FB923C" />
   <title>Hello Foodie!</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
